Make adjustments in preparation for project submission

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tweeter",
   "version": "1.0.0",
-  "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
+  "description": "A twitter clone single page app built with HTML, CSS, JS, jQuery and AJAX",
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,10 @@
     "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js",
     "sass-watch": "sass sass:public/styles --watch --poll --no-source-map"
   },
-  "author": "Lighthouse Labs",
+  "contributors": [
+    "Timothy Chan (timothy.chan2@mail.mcgill.ca)",
+    "Lighthouse Labs"
+  ],
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
